# item-describer

./: .gitignore  LICENSE  README.md  pyproject.toml
item_describer/: __init__.py  idescribe.py  prompt_content.py  reformat.py  topics_options.py
